nullaway_error_EC1A571E-E812-4991-88B1-0DD8B4AB0A44.txt
/Users/nima/Developer/null-repair-auto/projects/spring-framework/spring-context/src/main/java/org/springframework/context/annotation/BeanMethod.java:59: error: [NullAway] unboxing of a @Nullable value
		if (attributes != null && (Boolean) attributes.get("proxyBeanMethods") && !getMetadata().isOverridable()) {
		                          ^
    (see http://t.uber.com/nullaway )
